    absolute flag now defines whether a trove is newly installed or if
    it should be an update from an existing trove (when possible). Network
    changesets and changesets from files are treated almost identically now.
  * Swapped lock terminology for pin
  * Changed table names in database schema to better match the repository
    schema

Changes in 0.62.1:
  * UtilizeGroup fixed
  * conary updateall fixed
  * Disable SHA-1 integrity checks when trove changesets don't include
    files in various places
  * conary now prevents you from cooking empty groups

Changes in 0.62.0:
  * Initial OpenPGP (RFC 2440) based signature support has been
    added. Conary reads public keys from ~/.gnupg/pubring.gpg and
    /etc/conary/pubring.pgp.  Conary reads private keys from
    ~/.gnupg/secring.pgp.  Setting the "signatureKey" configuration
    variable to a key ID will select which key to use from the
    keyring. If signatureKey is not set, and there is a valid private
    keyring, the first key on the keyring will automatically be used
    to sign changesets when committing them to the repository.
    "cvc sign" adds a signature to a trove that already exists in the
    repository.
  * Change set generation on the command line is more flexible. It can generate
    erasure changesets as well as relative to nothing changesets
  * When creating multiple groups from the same recipe using newGroup(), 
    Conary now searches all subgroups when resolving dependencies within 
    a parent group
  * Conary no longer resolves dependencies for troves with byDefault=False
    (such as :test and :debuginfo).  Conary will now resolve dependencies in
    those troves only if you set checkOnlyByDefaultDeps=False.  When creating
    subgroups using newGroup(), pass the checkOnlyByDefaultDeps flag as an
    argument to the newGroup() function.
  * excludeTroves now applies to troves which have been added to 
    already installed collections

Changes in 0.61.12: