@@ -269,6 +269,10 @@ class SqlDbRepository(trovesource.SimpleTroveSource,
 	self.db.addFile(troveId, pathId, fileObj, path, fileId, version)
 
     def addTrove(self, oldTroveSpec, trove, pin = False):
+        if oldTroveSpec[1] and oldTroveSpec[1].branch() != \
+                                    trove.getVersion().branch():
+            oldTroveSpec = (None, None, None)
+
 	return self.db.addTrove(oldTroveSpec, trove, pin = pin)
 
     def addTroveDone(self, troveInfo):
